# docs/swagger.yaml
@@ -1,5 +1,30 @@
 basePath: /api/v1
 definitions:
+  entity.Category:
+    properties:
+      description:
+        maxLength: 250
+        minLength: 10
+        type: string
+      image:
+        type: string
+      keywords:
+        maxLength: 250
+        minLength: 3
+        type: string
+      status:
+        type: boolean
+      title:
+        maxLength: 30
+        minLength: 3
+        type: string
+    required:
+    - description
+    - image
+    - keywords
+    - status
+    - title
+    type: object
   entity.Faq:
     properties:
       answer:
@@ -66,7 +91,6 @@ definitions:
     - address
     - image
     - phone
-    - userId
     type: object
   entity.User:
     properties:
@@ -104,6 +128,117 @@ info:
   title: E Commerce API
   version: "1.0"
 paths:
+  /categories:
+    get:
+      consumes:
+      - application/json
+      description: Get all categories
+      parameters:
+      - description: Offset
+        in: query
+        name: offset
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Category'
+      summary: All  Data
+      tags:
+      - Categories
+    post:
+      consumes:
+      - application/json
+      description: create categories
+      parameters:
+      - description: Category form
+        in: body
+        name: body
+        schema:
+          $ref: '#/definitions/entity.Category'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            items:
+              $ref: '#/definitions/entity.Category'
+            type: array
+      summary: Create Data
+      tags:
+      - Categories
+  /categories/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete categories
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entity.Category'
+            type: array
+      summary: Delete Data
+      tags:
+      - Categories
+    get:
+      consumes:
+      - application/json
+      description: get string by ID
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Category'
+      summary: Show Data
+      tags:
+      - Categories
+    put:
+      consumes:
+      - application/json
+      description: update category
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Category update form
+        in: body
+        name: body
+        schema:
+          $ref: '#/definitions/entity.Category'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.Category'
+      summary: Update Data
+      tags:
+      - Categories
   /faqs:
     get:
       consumes:
@@ -326,29 +461,6 @@ paths:
       summary: Update Data
       tags:
       - Messages
-  /profiles:
-    post:
-      consumes:
-      - application/json
-      description: create Profiles
-      parameters:
-      - description: Profile form
-        in: body
-        name: body
-        schema:
-          $ref: '#/definitions/entity.Profile'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            items:
-              $ref: '#/definitions/entity.Profile'
-            type: array
-      summary: Create Data
-      tags:
-      - Profiles
   /profiles/{id}:
     delete:
       consumes:
@@ -390,31 +502,6 @@ paths:
           schema:
             $ref: '#/definitions/entity.Profile'
       summary: Show Data
-      tags:
-      - Profiles
-    put:
-      consumes:
-      - application/json
-      description: update Profile
-      parameters:
-      - description: Profile Id
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Profile update fom
-        in: body
-        name: body
-        schema:
-          $ref: '#/definitions/entity.Profile'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/entity.Profile'
-      summary: Profile Update Data
       tags:
       - Profiles
   /users:
@@ -506,6 +593,32 @@ paths:
           schema:
             $ref: '#/definitions/entity.User'
       summary: User Update Data
+      tags:
+      - Users
+  /users/{id}/profiles:
+    post:
+      consumes:
+      - application/json
+      description: Created or Updated Profile
+      parameters:
+      - description: User Id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Profile update fom
+        in: body
+        name: body
+        schema:
+          $ref: '#/definitions/entity.Profile'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/entity.Profile'
+      summary: Profile Created or Updated Data
       tags:
       - Users
 swagger: "2.0"
