# internal/controller/user/user.go
@@ -10,11 +10,15 @@ import (
 	"api/internal/secret/jwtManage"
 	"api/internal/validate"
 	"entgo.io/ent/dialect/sql"
+	"fmt"
 	"github.com/gofiber/fiber/v2"
 	"strconv"
 	"strings"
 	"time"
 )
+
+// TODO
+// User profile eklenmesini kontrol edeceğim.
 
 type ControllerUser struct {
 	controller.Controller
@@ -200,6 +204,57 @@ func (u ControllerUser) Show(ctx *fiber.Ctx) error {
 		return ctx.Status(fiber.StatusNotFound).JSON(response.ErrorResponse{StatusCode: 404, Message: "User not finding"})
 	}
 	return ctx.Status(fiber.StatusOK).JSON(response.SuccessResponse{StatusCode: 200, Message: "User is finding", Data: responseDto})
+}
+
+// UserToProfile ShowAccount godoc
+// @Summary      Profile Created or Updated Data
+// @Description  Created or Updated Profile
+// @Tags         Users
+// @Accept       json
+// @Produce      json
+// @Param        id path  string  true   "User Id"
+// @Param        body body  entity.Profile  false   "Profile update fom"
+// @Success      201  {object}  entity.Profile
+// @Router       /users/{id}/profiles [post]
+func (u ControllerUser) UserToProfile(ctx *fiber.Ctx) error {
+	id := ctx.Params("id")
+	idInt, convertError := strconv.Atoi(id)
+
+	if convertError != nil {
+		return ctx.Status(fiber.StatusBadRequest).JSON(response.ErrorResponse{StatusCode: 400, Message: "Bad Request , Invalid type error. Type must int"})
+	}
+	profile := entity.Profile{}
+	parseError := ctx.BodyParser(&profile)
+	if parseError != nil {
+		return ctx.Status(fiber.StatusBadRequest).JSON(response.ErrorResponse{StatusCode: 400, Message: "Bad request ,body parse error."})
+	}
+	err := validate.ValidateStructToTurkish(&profile)
+	if err == nil {
+		user, _ := u.Client.User.Query().Where(func(s *sql.Selector) {
+			s.Where(sql.EQ("id", idInt))
+		}).First(u.Context)
+		_, profileError := u.Client.Profile.Query().Where(func(s *sql.Selector) {
+			s.Where(sql.EQ("user_profiles", idInt))
+			s.Where(sql.EQ("deleted_at", nil))
+		}).First(u.Context)
+		// updating the profile, if any
+		if profileError == nil {
+			data, errCreate := u.Client.Profile.Update().SetOwner(user).SetOwnerID(idInt).SetPhone(profile.Phone).SetAddress(profile.Address).SetImage(profile.Image).Save(u.Context)
+			if errCreate != nil {
+				fmt.Println(errCreate.Error())
+				return ctx.Status(fiber.StatusBadRequest).JSON(response.ErrorResponse{StatusCode: 400, Message: "Profile not created"})
+			}
+			return ctx.Status(fiber.StatusCreated).JSON(response.SuccessResponse{StatusCode: 201, Message: "Profile created", Data: data})
+		} else { // create profile
+			data, errCreate := u.Client.Profile.Create().SetOwner(user).SetOwnerID(idInt).SetPhone(profile.Phone).SetAddress(profile.Address).SetImage(profile.Image).Save(u.Context)
+			if errCreate != nil {
+				fmt.Println(errCreate.Error())
+				return ctx.Status(fiber.StatusBadRequest).JSON(response.ErrorResponse{StatusCode: 400, Message: "Profile not created"})
+			}
+			return ctx.Status(fiber.StatusCreated).JSON(response.SuccessResponse{StatusCode: 201, Message: "Profile created", Data: data})
+		}
+	}
+	return ctx.Status(fiber.StatusUnprocessableEntity).JSON(response.ErrorResponse{StatusCode: 422, Message: err})
 }
 
 func (u ControllerUser) Login(ctx *fiber.Ctx) error {
